Associate small-caps font variant with lowercase transform in headings
The lowercase transform used to obtain small capitals in TypeKit's font
ff-quadraat-sc-web lead to all-lowercase titles when the fallback font
Georgia is applied when the book is opened from localhost.

I added the small-caps style, which has no visible effect when the font
is available, and displays headings in small capitals in fallback font.

--- a/book-en/book.css
+++ b/book-en/book.css
@@ -26,6 +26,7 @@ h1 {
 	letter-spacing: 2px;
 	font-weight: normal;
 	text-transform: lowercase;
+	font-variant: small-caps;
 	padding-top: 5em;
 	margin-top: 0;
 	margin-bottom: 4em;
@@ -41,6 +42,7 @@ h2 {
 	letter-spacing: 2px;
 	font-weight: normal;
 	text-transform: lowercase;
+	font-variant: small-caps;
 	margin-top: 3.2em;
 	margin-bottom: 0;
 	color: rgba(0,0,0,0.4);
@@ -52,6 +54,7 @@ header {
 	letter-spacing: 2px;
 	font-weight: normal;
 	text-transform: lowercase;
+	font-variant: small-caps;
 	text-align: center;
 	padding-bottom: 5em;
 	background-color: #fff;
@@ -115,6 +118,7 @@ cite, .osf, div.sign {
 	letter-spacing: 2px;
 	font-style: normal;
 	text-transform: lowercase;
+	font-variant: small-caps;
 }
 
 div.sign {
@@ -141,6 +145,7 @@ p.chap1-list {
 	font-family: ff-quadraat-sc-web, Georgia, serif;
 	letter-spacing: 2px;
 	text-transform: lowercase;
+	font-variant: small-caps;
 	color: #e74357;
 
 }
@@ -249,6 +254,7 @@ a.buybutton {
 	font-size: 1em;
 	letter-spacing: 2px;
 	text-transform: lowercase;
+	font-variant: small-caps;
 }
 
 a.buybutton:hover {
