--- a/book-en/book.css
+++ b/book-en/book.css
@@ -6,7 +6,7 @@ body {
   background-color: #f8f8f5;
   margin: 0;
   padding: 0;
-  }
+}
 
 article {
   max-width: 30em;
@@ -17,8 +17,13 @@ article {
   background-color: #fff;
 }
 
-a { color: #404030; }
-a:hover { color: #e74357; }
+a {
+  color: #404030;
+}
+
+a:hover {
+  color: #e74357;
+}
 
 h1 {
   font-family: ff-quadraat-sc-web, Georgia, serif;
@@ -34,7 +39,9 @@ h1 {
   text-align: center;
 }
 
-h1 span { color: #404030; }
+h1 span {
+  color: #404030;
+}
 
 h2 {
   font-family: ff-quadraat-sc-web, Georgia, serif;
@@ -65,11 +72,24 @@ header {
   border-right: 1px solid rgba(0,0,0,0.07);
 }
 
-header a:first-child { text-decoration: none; }
+header a:first-child {
+  text-decoration: none;
+}
 
-header h1 { display: inline; margin: 0; padding-top: 1em; color: rgba(0,0,0,0.4);}
-header h1 span { color: rgba(0,0,0,0.2); }
-header a { color: #e74357; }
+header h1 {
+  display: inline;
+  margin: 0;
+  padding-top: 1em;
+  color: rgba(0,0,0,0.4);
+}
+
+header h1 span {
+  color: rgba(0,0,0,0.2);
+}
+
+header a {
+  color: #e74357;
+}
 
 header h1 a {
   color: rgba(0,0,0,0.4);
@@ -81,13 +101,22 @@ p {
   text-indent: 1.25em;
 }
 
-article.ack { padding-bottom: 4em; }
+article.ack {
+  padding-bottom: 4em;
+}
 
-blockquote { padding-left: 2.5em; }
+blockquote {
+  padding-left: 2.5em;
+}
 
-p.first { text-indent: 0; }
+p.first {
+  text-indent: 0;
+}
 
-ol { list-style: none; padding: 0; }
+ol {
+  list-style: none;
+  padding: 0;
+}
 
 nav {
   border: 0;
@@ -102,13 +131,21 @@ nav {
   left: 50%;
   margin-top: -6.25em;
   margin-left: -10.5em;
-
 }
 
-nav a { text-decoration: none; color: rgba(0,0,0,0.2); }
-nav ol { margin: 0; padding: 0; }
+nav a {
+  text-decoration: none;
+  color: rgba(0,0,0,0.2);
+}
 
-article img { width: 100%; }
+nav ol {
+  margin: 0;
+  padding: 0;
+}
+
+article img {
+  width: 100%;
+}
 
 cite, .osf, div.sign {
   font-family: ff-quadraat-sc-web, Georgia, serif;
@@ -128,13 +165,17 @@ div.sign {
   font-size: 1.4em;
 }
 
-.osf { letter-spacing: 0; }
+.osf {
+  letter-spacing: 0;
+}
 
 img.illo {
   padding-top: 5em;
 }
 
-div.img-block { margin: 1.6em 0; }
+div.img-block {
+  margin: 1.6em 0;
+}
 
 p.chap1-list {
   text-indent: 0;
@@ -145,10 +186,11 @@ p.chap1-list {
   text-transform: lowercase;
   font-variant: small-caps;
   color: #e74357;
-
 }
 
-ul { list-style: circle; }
+ul {
+  list-style: circle;
+}
 
 p.chair-caption {
   text-indent: 0;
@@ -156,7 +198,9 @@ p.chair-caption {
   font-size: 0.8em;
 }
 
-p.chair-caption .osf { letter-spacing: 0; }
+p.chair-caption .osf {
+  letter-spacing: 0;
+}
 
 p.chair-caption:before {
   content: ' ';
@@ -166,9 +210,6 @@ p.chair-caption:before {
   border-top: 1px solid rgba(0,0,0,0.25);
 }
 
-
-
-
 nav ol li a.active {
   display: block;
   margin-left: -1px;
@@ -176,36 +217,60 @@ nav ol li a.active {
   font-size: 1.05em;
 }
 
-nav ol li { overflow: hidden; }
-nav ol li.sep { margin-bottom: 0.5em; }
-
-
-footer { text-align: center; font-size: 0.8em; color: rgba(0,0,0,0.4); padding: 2em 0; }
-footer a { color: rgba(0,0,0,0.4); }
-
-    a.tooltip {outline:none; }
-a.tooltip:hover {text-decoration:none; color: #e74357;}
-a.tooltip span {
-    z-index:10;display:none;
-    font-size: 16px;
-    line-height: 0.8em;
-    padding: 0.5em;
-    margin-top:0;
-    margin-left:1.25em;
-
+nav ol li {
+  overflow: hidden;
 }
+
+nav ol li.sep {
+  margin-bottom: 0.5em;
+}
+
+footer {
+  text-align: center;
+  font-size: 0.8em;
+  color: rgba(0,0,0,0.4);
+  padding: 2em 0;
+}
+
+footer a {
+  color: rgba(0,0,0,0.4);
+}
+
+a.tooltip {
+  outline: none;
+}
+
+a.tooltip:hover {
+  text-decoration: none;
+  color: #e74357;
+}
+
+a.tooltip span {
+  z-index: 10;
+  display: none;
+  font-size: 16px;
+  line-height: 0.8em;
+  padding: 0.5em;
+  margin-top: 0;
+  margin-left: 1.25em;
+}
+
 a.tooltip:hover span{
-    display:inline; position:absolute; color:#fff;
-    background:rgba(75,75,60,0.8); left: 1.25em; max-height: 30px; text-align: left;}
+  display: inline;
+  position: absolute;
+  color: #fff;
+  background: rgba(75,75,60,0.8);
+  left: 1.25em;
+  max-height: 30px;
+  text-align: left;
+}
 
 /*CSS3 extras*/
-a.tooltip span
-{
-    border-radius:4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
+a.tooltip span {
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
 }
-
 
 a.continue {
   width: 100%;
@@ -220,16 +285,36 @@ a.continue {
   text-decoration: none;
 }
 
-a.continue:hover { text-decoration: underline; }
+a.continue:hover {
+  text-decoration: underline;
+}
 
-.heart { font-size: 75%; }
-.fin { font-size: 80%; color: rgba(0,0,0,0.25); }
+.heart {
+  font-size: 75%;
+}
+.fin {
+  font-size: 80%;
+  color: rgba(0,0,0,0.25);
+}
 
-q:before { content: none; }
-q:after { content: none; }
-q { display: block; text-indent: -0.4em; font-style: italic;}
-cite { display: block; margin-bottom: 1.6em; }
+q:before {
+  content: none;
+}
 
+q:after {
+  content: none;
+}
+
+q {
+  display: block;
+  text-indent: -0.4em;
+  font-style: italic;
+}
+
+cite {
+  display: block;
+  margin-bottom: 1.6em;
+}
 
 article.endnotes p {
   text-indent: 0;
@@ -245,7 +330,7 @@ a.endnote-anchor:target {
 }
 
 a.buybutton {
-  background-color:rgba(75,75,60,0.5);
+  background-color: rgba(75,75,60,0.5);
   display: block;
   margin: 0 auto;
   width: 175px;
@@ -268,20 +353,48 @@ a.buybutton:hover {
   background-color: rgba(75,75,60,1);
 }
 
-
 @media screen and (max-width:325px) {
-  nav ol li { font-size: 1em !important; padding: 0 5px 0 0 !important; margin: 0;}
-  nav ol li a.active { line-height: 150%; }
+  nav ol li {
+    font-size: 1em !important;
+    padding: 0 5px 0 0 !important;
+    margin: 0;
+  }
+
+  nav ol li a.active {
+    line-height: 150%;
+  }
 }
 
 @media screen and (max-width:500px) {
-  nav ol li { font-size: 1.5em; padding: 0 5px 0 0 !important; margin: 0; }
-  header a { display: block; }
-  header span { display: none; }
-  h1 { margin-top: -2em; }
-  img.illo { padding-top: 1.5em; }
-  body { font-size: 18px; }
-  blockquote { padding-left: 0; }
+  nav ol li {
+    font-size: 1.5em;
+    padding: 0 5px 0 0 !important;
+    margin: 0;
+  }
+
+  header a {
+    display: block;
+  }
+
+  header span {
+    display: none;
+  }
+
+  h1 {
+    margin-top: -2em;
+  }
+
+  img.illo {
+    padding-top: 1.5em;
+  }
+
+  body {
+    font-size: 18px;
+  }
+
+  blockquote {
+    padding-left: 0;
+  }
 }
 
 
@@ -309,19 +422,58 @@ a.buybutton:hover {
     padding-right: 0.35em;
   }
 
-  nav ol li a { display: inline-block; margin-top: 20px; }
-  nav ol li a.active { position: relative; top:-2px; }
-  header { padding-bottom: 0; }
-  li.sep { margin-right: 0.4em; }
+  nav ol li a {
+    display: inline-block;
+    margin-top: 20px;
+  }
 
-  a.tooltip:hover span { display: none; }
+  nav ol li a.active {
+    position: relative;
+    top:-2px;
+  }
 
-  article, header, nav { padding-left: 1em; padding-right: 1em; }
-  a.continue { padding-left: 1em; padding-right: 1em; margin-left: -1em;}
+  header {
+    padding-bottom: 0;
+  }
 
+  li.sep {
+    margin-right: 0.4em;
+  }
 
+  a.tooltip:hover span {
+    display: none;
+  }
+
+  article, header, nav {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
+
+  a.continue {
+    padding-left: 1em;
+    padding-right: 1em;
+    margin-left: -1em;
+  }
 }
 
-@media screen and (min-width:1300px) {   body { font-size: 24px; }  }
-@media screen and (min-width:1800px) {   body { font-size: 30px; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; }  }
-@media screen and (min-width:2100px) {   body { font-size: 36px; text-rendering: optimizeLegibility; -webkit-font-smoothing: antialiased; }  }
+@media screen and (min-width:1300px) {
+  body {
+    font-size: 24px;
+  }
+}
+
+@media screen and (min-width:1800px) {
+  body {
+    font-size: 30px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+  }
+}
+
+@media screen and (min-width:2100px) {
+  body {
+    font-size: 36px;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+  }
+}
