Remove text indent, add margins around paragraphs in block quotes
These styles are consistent with the styles applied to these paragraphs
in the printed version of the book.

--- a/book-en/book.css
+++ b/book-en/book.css
@@ -101,6 +101,11 @@ p {
   text-indent: 1.25em;
 }
 
+blockquote p {
+  margin: 1.5em 0;
+  text-indent: 0;
+}
+
 article.ack {
   padding-bottom: 4em;
 }
