Reset implicit margins on blockquote, define explicit padding instead
The browsers typically define margins on blockquotes, which were
added to the (left) padding defined in the style sheet. I reset the
margins to 0 and defined explicit padding to restore white space
above and below the block quote.

--- a/book-en/book.css
+++ b/book-en/book.css
@@ -111,7 +111,10 @@ article.ack {
 }
 
 blockquote {
+  margin: 0;
   padding-left: 2.5em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 p.first {
