Remove <br> from header, keep in h1 in block display

--- a/book-en/Styles/book.css
+++ b/book-en/Styles/book.css
@@ -81,9 +81,8 @@ header a:first-child {
 }
 
 header h1 {
-  display: inline;
   margin: 0;
-  padding-top: 1em;
+  padding: 0;
   color: rgba(0,0,0,0.4);
 }
 
