--- a/book-en/Styles/book.css
+++ b/book-en/Styles/book.css
@@ -1,94 +1,20 @@
-body {
-  font-family: ff-quadraat-web, Georgia, serif;
-  line-height: 160%;
-  font-size: 21px;
-  color: #404030;
-  background-color: #f8f8f5;
-  margin: 0;
-  padding: 0;
-}
-
-article {
-  max-width: 30em;
-  margin: 0 auto;
-  padding: 0 3em;
-  border: 1px solid rgba(0,0,0,0.07);
-  border-bottom: 0;
-  background-color: #fff;
-}
-
-article.ack {
-  padding-bottom: 4em;
-}
-
-a {
-  color: #404030;
-}
-
-a:hover {
-  color: #e74357;
-}
-
-h1 {
-  font-size: 1em;
-  letter-spacing: 2px;
-  font-weight: normal;
-  text-transform: lowercase;
-  font-variant: small-caps;
-  padding-top: 5em;
-  margin-top: 0;
-  margin-bottom: 4em;
-  color: #e74357;
-  text-align: center;
-}
-
-h1 span {
-  color: #404030;
-}
-
-h2 {
-  font-size: 1em;
-  letter-spacing: 2px;
-  font-weight: normal;
-  text-transform: lowercase;
-  font-variant: small-caps;
-  margin-top: 3.2em;
-  margin-bottom: 0;
-  color: rgba(0,0,0,0.4);
-}
-
-header {
-  font-size: 1em;
-  letter-spacing: 2px;
-  font-weight: normal;
-  text-transform: lowercase;
-  font-variant: small-caps;
-  text-align: center;
-  padding-bottom: 5em;
-  background-color: #fff;
-  max-width: 30em;
-  padding: 1em 3em;
-  margin: 0 auto;
-  border-left: 1px solid rgba(0,0,0,0.07);
-  border-right: 1px solid rgba(0,0,0,0.07);
-}
+@import "typography.css";
+@import "color.css";
+@import "layout.css";
+@import "decoration.css";
 
 header a:first-child {
   text-decoration: none;
-}
-
-header h1 {
-  margin: 0;
-  padding: 0;
-  color: rgba(0,0,0,0.4);
 }
 
 header h1 span {
   color: rgba(0,0,0,0.2);
 }
 
-header a {
-  color: #e74357;
+@media screen and (max-width:500px) {
+  header span {
+    display: none;
+  }
 }
 
 header h1 a {
@@ -96,88 +22,10 @@ header h1 a {
   text-decoration: underline !important;
 }
 
-p {
-  margin: 0;
-  text-indent: 1.25em;
-}
-
-blockquote p {
-  margin: 1.5em 0;
-  text-indent: 0;
-}
-
-blockquote {
-  margin: 0;
-  padding-left: 2.5em;
-  padding-top: 1em;
-  padding-bottom: 1em;
-}
-
-p.first {
-  text-indent: 0;
-}
-
-ol {
-  list-style: none;
-  padding: 0;
-}
-
-nav {
-  border: 0;
-  padding: 0;
-  float: left;
-  width: 1em;
-  font-size: 2em;
-  text-align: center;
-  background: none;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -6.25em;
-  margin-left: -10.5em;
-}
-
-nav a {
-  text-decoration: none;
-  color: rgba(0,0,0,0.2);
-}
-
-nav ol {
-  margin: 0;
-  padding: 0;
-}
-
-article img {
-  width: 100%;
-}
-
-cite, .osf, div.sign {
-  font-size: 1em;
-  letter-spacing: 2px;
-  font-style: normal;
-  text-transform: lowercase;
-  font-variant: small-caps;
-}
-
-div.sign {
-  border: 2px solid rgba(0,0,0,0.2);
-  max-width: 70%;
-  margin: 2em auto;
-  text-align: center;
-  padding: 1em 1.5em;
-  font-size: 1.4em;
-}
-
-.osf {
-  letter-spacing: 0;
-}
-
-img.illo {
-  padding-top: 5em;
-}
-
-div.img-block {
-  margin: 1.6em 0;
+@media screen and (max-width:500px) {
+  header a {
+    display: block;
+  }
 }
 
 p.chap1-list {
@@ -188,10 +36,6 @@ p.chap1-list {
   text-transform: lowercase;
   font-variant: small-caps;
   color: #e74357;
-}
-
-ul {
-  list-style: circle;
 }
 
 p.chair-caption {
@@ -210,125 +54,6 @@ p.chair-caption:before {
   width: 25%;
   height: 1em;
   border-top: 1px solid rgba(0,0,0,0.25);
-}
-
-nav ol li a.active {
-  display: block;
-  margin-left: -1px;
-  margin-top: -3px;
-  font-size: 1.05em;
-}
-
-nav ol li {
-  overflow: hidden;
-}
-
-nav ol li.sep {
-  margin-bottom: 0.5em;
-}
-
-footer {
-  text-align: center;
-  font-size: 0.8em;
-  color: rgba(0,0,0,0.4);
-  padding: 2em 0;
-}
-
-footer a {
-  color: rgba(0,0,0,0.4);
-}
-
-a.tooltip {
-  outline: none;
-}
-
-a.tooltip:hover {
-  text-decoration: none;
-  color: #e74357;
-}
-
-a.tooltip span {
-  z-index: 10;
-  display: none;
-  font-size: 16px;
-  line-height: 0.8em;
-  padding: 0.5em;
-  margin-top: 0;
-  margin-left: 1.25em;
-}
-
-a.tooltip:hover span{
-  display: inline;
-  position: absolute;
-  color: #fff;
-  background: rgba(75,75,60,0.8);
-  left: 1.25em;
-  max-height: 30px;
-  text-align: left;
-}
-
-/*CSS3 extras*/
-a.tooltip span {
-  border-radius: 4px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-}
-
-a.continue {
-  width: 100%;
-  border-top: 1px solid rgba(0,0,0,0.1);
-  display: block;
-  padding: 3em 3em 3.25em 3em;
-  text-align: center;
-  margin-top: 4em;
-  margin-bottom: 0;
-  margin-left: -3em;
-  color: #e74357;
-  text-decoration: none;
-}
-
-a.continue:hover {
-  text-decoration: underline;
-}
-
-.heart {
-  font-size: 75%;
-}
-.fin {
-  font-size: 80%;
-  color: rgba(0,0,0,0.25);
-}
-
-q:before {
-  content: none;
-}
-
-q:after {
-  content: none;
-}
-
-q {
-  display: block;
-  text-indent: -0.4em;
-  font-style: italic;
-}
-
-cite {
-  display: block;
-  margin-bottom: 1.6em;
-}
-
-article.endnotes p {
-  text-indent: 0;
-  margin: 1.6em 0;
-}
-
-a.endnote-anchor {
-  text-decoration: none;
-}
-
-a.endnote-anchor:target {
-  background-color: #f8f8a8;
 }
 
 a.buybutton {
@@ -352,129 +77,4 @@ a.buybutton {
 a.buybutton:hover {
   text-decoration: none;
   background-color: rgba(75,75,60,1);
-}
-
-@media screen and (max-width:325px) {
-  nav ol li {
-    font-size: 1em !important;
-    padding: 0 5px 0 0 !important;
-    margin: 0;
-  }
-
-  nav ol li a.active {
-    line-height: 150%;
-  }
-}
-
-@media screen and (max-width:500px) {
-  nav ol li {
-    font-size: 1.5em;
-    padding: 0 5px 0 0 !important;
-    margin: 0;
-  }
-
-  header a {
-    display: block;
-  }
-
-  header span {
-    display: none;
-  }
-
-  h1 {
-    margin-top: -2em;
-  }
-
-  img.illo {
-    padding-top: 1.5em;
-  }
-
-  body {
-    font-size: 18px;
-  }
-
-  blockquote {
-    padding-left: 0;
-  }
-}
-
-
-@media screen and (max-width:900px) {
-  nav {
-    float: none;
-    position: inherit;
-    left: inherit;
-    top: inherit;
-    margin-top: 0;
-    margin-left: 0;
-    border-left: 1px solid rgba(0,0,0,0.07);
-    border-right: 1px solid rgba(0,0,0,0.07);
-    background-color: #fff;
-    padding-top: 0;
-    width: inherit;
-    font-size: 1em;
-    margin: 0 auto;
-    max-width: 30em;
-  }
-
-  nav ol li {
-    display: inline-block;
-    font-size: 1.75em;
-    padding-right: 0.35em;
-  }
-
-  nav ol li a {
-    display: inline-block;
-    margin-top: 20px;
-  }
-
-  nav ol li a.active {
-    position: relative;
-    top:-2px;
-  }
-
-  header {
-    padding-bottom: 0;
-  }
-
-  li.sep {
-    margin-right: 0.4em;
-  }
-
-  a.tooltip:hover span {
-    display: none;
-  }
-
-  article, header, nav {
-    padding-left: 1em;
-    padding-right: 1em;
-  }
-
-  a.continue {
-    padding-left: 1em;
-    padding-right: 1em;
-    margin-left: -1em;
-  }
-}
-
-@media screen and (min-width:1300px) {
-  body {
-    font-size: 24px;
-  }
-}
-
-@media screen and (min-width:1800px) {
-  body {
-    font-size: 30px;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-  }
-}
-
-@media screen and (min-width:2100px) {
-  body {
-    font-size: 36px;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-  }
 }
