Inherit link color from parent color
This captures the intent of several rules, which became redundant,
redefining link colors to use the same color as the parent.

--- a/book-en/Styles/color.css
+++ b/book-en/Styles/color.css
@@ -17,9 +17,12 @@ a.continue {
 }
 
 body,
-h1 span,
-a {
+h1 span {
   color: #404030;
+}
+
+a {
+  color: inherit;
 }
 
 h1,
@@ -32,8 +35,7 @@ a.tooltip:hover /* TODO: check if needed */ {
 
 h2,
 header h1,
-footer,
-footer a {
+footer {
   color: rgba(0,0,0,0.4);
 }
 
