Simplify selector for tooltip's span
There is no need to target the hover state, since the tooltip's span
is only visible on hover anyway.

--- a/book-en/Styles/color.css
+++ b/book-en/Styles/color.css
@@ -32,7 +32,7 @@ a:hover {
   color: #e74357;
 }
 
-a.tooltip:hover span {
+a.tooltip span {
   color: #fff;
   background-color: rgba(75,75,60,0.8);
 }
