--- a/book-en/Styles/decoration.css
+++ b/book-en/Styles/decoration.css
@@ -31,7 +31,7 @@ div.sign {
   border-style: solid;
 }
 
-a.tooltip span {
+.tooltip {
   /* CSS3 extras */
   border-radius: 4px;
   -moz-border-radius: 4px;
@@ -49,7 +49,7 @@ a.continue:hover {
   text-decoration: underline;
 }
 
-a.tooltip {
+nav a {
   outline: none;
 }
 
