Replace p.chap01-list with ul.balanced-list
I used a ul list and li list items instead of a paragraph p
and br line breaks between items, and renamed to CSS class
to be less specific.

I also separated the CSS styles into separate style sheets
according to their category: colors, layout, typography, decoration.

--- a/book-en/Styles/typography.css
+++ b/book-en/Styles/typography.css
@@ -79,6 +79,7 @@ h1,
 h2,
 header,
 cite,
+.balanced-list,
 .osf,
 div.sign {
   font-size: 1em;
@@ -112,6 +113,7 @@ p {
   text-indent: 1.25em;
 }
 
+.balanced-list,
 p.first,
 blockquote p,
 article.endnotes p {
@@ -126,6 +128,7 @@ q {
 header,
 nav,
 h1,
+.balanced-list,
 a.continue,
 div.sign,
 footer {
