Move responsive styles for header links left in book.css to layout.css
I was unsure whether these styles had the intended effect, but I could
confirm their relevance by observing the effect in the responsive view
of Firefox developer tools.

--- a/book-en/Styles/layout.css
+++ b/book-en/Styles/layout.css
@@ -79,6 +79,12 @@ header {
   }
 }
 
+@media screen and (max-width:500px) {
+  header a {
+    display: block;
+  }
+}
+
 blockquote {
   padding-left: 2.5em;
   padding-top: 1em;
