--- a/book-en/Styles/typography.css
+++ b/book-en/Styles/typography.css
@@ -105,6 +105,7 @@ div.sign {
   font-size: 80%;
 }
 
+.img-caption,
 footer {
   font-size: 0.8em;
 }
@@ -114,6 +115,7 @@ p {
 }
 
 .balanced-list,
+.img-caption,
 p.first,
 blockquote p,
 article.endnotes p {
