Use consistent colors for the lines before and after the article
I preserved the different shades for the lines on the left/right
of the articles, slightly lighter than the color of the lines on
top/bottom of the article (where by bottom, I actually mean between
the end of the chapter copy and the top of the continue link below).

--- a/book-en/Styles/color.css
+++ b/book-en/Styles/color.css
@@ -3,17 +3,14 @@ body {
 }
 
 article,
-header {
+header,
+a.continue {
   background-color: #fff;
-  border-color: rgba(0,0,0,0.07);
+  border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.07);
 }
 
 a.endnote-anchor:target {
   background-color: #f8f8a8;
-}
-
-a.continue {
-  border-color: rgba(0,0,0,0.1); /* TODO: use same border color as article */
 }
 
 body,
