Remove TODO comment (better as is)
The current option offers more white space.

--- a/book-en/Styles/layout.css
+++ b/book-en/Styles/layout.css
@@ -102,7 +102,7 @@ blockquote p {
 }
 
 article.endnotes p {
-  margin: 1.6em 0; /* TODO: use same margins as blockquote p */
+  margin: 1.6em 0;
 }
 
 cite {
