--- a/book-en/Styles/layout.css
+++ b/book-en/Styles/layout.css
@@ -149,24 +149,24 @@ nav ol li {
   overflow: hidden;
 }
 
-@media screen and (max-width:325px) {
+@media screen and (max-width:900px) {
   nav ol li {
-    padding: 0 5px 0 0 !important; /* TODO: remove !important */
-    margin: 0;
+    display: inline-block;
+    padding-right: 0.35em;
   }
 }
 
 @media screen and (max-width:500px) {
   nav ol li {
-    padding: 0 5px 0 0 !important; /* TODO: remove !important */
+    padding: 0 5px 0 0;
     margin: 0;
   }
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width:325px) {
   nav ol li {
-    display: inline-block;
-    padding-right: 0.35em;
+    padding: 0 5px 0 0;
+    margin: 0;
   }
 }
 
