Refine styles of (bullet) lists to get closer to the look in the book
I also increased the maximum width of the article from 30px to 32px
to make sure that the longest line fits, avoiding an orphan word.
(this issue occurs with Georgia font used as fall back for ff-quadraat-web,
not available in this open source version).

--- a/book-en/Styles/layout.css
+++ b/book-en/Styles/layout.css
@@ -1,6 +1,7 @@
 body,
 nav,
 ol,
+ul,
 header h1,
 p,
 blockquote {
@@ -16,7 +17,7 @@ cite {
 }
 
 article {
-  max-width: 30em;
+  max-width: 32em;
   margin: 0 auto;
   padding: 0 3em;
 }
@@ -134,6 +135,10 @@ nav {
     padding-right: 1em;
     max-width: 30em;
   }
+}
+
+ul {
+  margin: 1em 0;
 }
 
 ul.balanced-list {
