Add class 'bullet-list' to ul elements, simplify CSS
The list-style is now set to 'none' by default, and the decoration
is only added to ul elements with the class 'bullet-list'.

--- a/book-en/Styles/decoration.css
+++ b/book-en/Styles/decoration.css
@@ -62,15 +62,14 @@ nav a {
   outline: none;
 }
 
-ul {
-  list-style: disc;
-  list-style-position: inside;
-}
-
-ul.balanced-list,
-ul.img-caption,
+ul,
 ol {
   list-style: none;
+}
+
+ul.bullet-list {
+  list-style: disc;
+  list-style-position: inside;
 }
 
 q:before {
