--- a/book-en/Styles/layout.css
+++ b/book-en/Styles/layout.css
@@ -16,8 +16,12 @@ cite {
   display: block;
 }
 
-article {
+article,
+header {
   max-width: 32em;
+}
+
+article {
   margin: 0 auto;
   padding: 0 3em;
 }
@@ -67,7 +71,6 @@ h2 {
 
 header {
   padding-bottom: 5em;
-  max-width: 30em;
   padding: 1em 3em;
   margin: 0 auto;
 }
@@ -133,7 +136,7 @@ nav {
     padding-top: 0;
     padding-left: 1em;
     padding-right: 1em;
-    max-width: 30em;
+    max-width: 32em;
   }
 }
 
