Add a separate page with the Table of Contents

--- a/book-en/Styles/color.css
+++ b/book-en/Styles/color.css
@@ -25,6 +25,7 @@ a {
 
 h1,
 h2,
+h3,
 .dedication,
 .balanced-list,
 a.download,
@@ -38,7 +39,7 @@ a:hover {
   background-color: rgba(75,75,60,0.8);
 }
 
-h3,
+.endnotes h3,
 header h1,
 footer {
   color: rgba(0,0,0,0.4);
