--- a/book-en/Styles/decoration.css
+++ b/book-en/Styles/decoration.css
@@ -23,6 +23,12 @@ article {
   border-bottom-style: none;
 }
 
+hr {
+  width: 4em;
+  border-style: double none none none;
+  border-width: 4px 0 0 0;
+}
+
 a.continue {
   border-top-style: solid;
 }
